--- a/experiments/cross_validate_train_submit_template.ipynb
+++ b/experiments/cross_validate_train_submit_template.ipynb
@@ -5,8 +5,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-06T07:41:57.354764Z",
-     "start_time": "2019-02-06T07:41:55.767808Z"
+     "end_time": "2019-02-06T08:08:29.937544Z",
+     "start_time": "2019-02-06T08:08:28.833306Z"
     }
    },
    "outputs": [],
@@ -41,8 +41,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-06T07:41:58.734255Z",
-     "start_time": "2019-02-06T07:41:57.356662Z"
+     "end_time": "2019-02-06T08:08:31.464402Z",
+     "start_time": "2019-02-06T08:08:29.939529Z"
     }
    },
    "outputs": [],
@@ -63,8 +63,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-06T07:42:04.256576Z",
-     "start_time": "2019-02-06T07:41:58.736079Z"
+     "end_time": "2019-02-06T08:08:36.205652Z",
+     "start_time": "2019-02-06T08:08:31.466284Z"
     }
    },
    "outputs": [],
@@ -88,8 +88,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-06T07:42:04.260497Z",
-     "start_time": "2019-02-06T07:42:04.258175Z"
+     "end_time": "2019-02-06T08:08:36.209800Z",
+     "start_time": "2019-02-06T08:08:36.207372Z"
     }
    },
    "outputs": [],
@@ -120,8 +120,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-06T07:42:04.761353Z",
-     "start_time": "2019-02-06T07:42:04.262194Z"
+     "end_time": "2019-02-06T08:08:36.728512Z",
+     "start_time": "2019-02-06T08:08:36.211569Z"
     }
    },
    "outputs": [],
@@ -147,63 +147,63 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-06T07:42:04.767304Z",
-     "start_time": "2019-02-06T07:42:04.763380Z"
+     "end_time": "2019-02-06T08:08:58.546567Z",
+     "start_time": "2019-02-06T08:08:58.530260Z"
     }
    },
    "outputs": [],
    "source": [
-    "# valuable_columns = ['ncl[0]',\n",
-    "#  'ncl[1]',\n",
-    "#  'ncl[2]',\n",
-    "#  'ncl[3]',\n",
-    "#  'avg_cs[0]',\n",
-    "#  'avg_cs[1]',\n",
-    "#  'avg_cs[2]',\n",
-    "#  'avg_cs[3]',\n",
-    "#  'MatchedHit_TYPE[0]',\n",
-    "#  'MatchedHit_TYPE[1]',\n",
-    "#  'MatchedHit_TYPE[2]',\n",
-    "#  'MatchedHit_X[3]',\n",
-    "#  'MatchedHit_Y[0]',\n",
-    "#  'MatchedHit_Y[1]',\n",
-    "#  'MatchedHit_Y[2]',\n",
-    "#  'MatchedHit_Y[3]',\n",
-    "#  'MatchedHit_DX[3]',\n",
-    "#  'MatchedHit_DY[3]',\n",
-    "#  'MatchedHit_DZ[3]',\n",
-    "#  'MatchedHit_T[0]',\n",
-    "#  'MatchedHit_DT[0]',\n",
-    "#  'MatchedHit_DT[1]',\n",
-    "#  'Lextra_X[3]',\n",
-    "#  'NShared',\n",
-    "#  'Mextra_DX2[0]',\n",
-    "#  'Mextra_DX2[3]',\n",
-    "#  'FOI_hits_N',\n",
-    "#  'PT',\n",
-    "#  'P',\n",
-    "#  'ClosestHit_X[0]',\n",
-    "#  'ClosestHit_X[1]',\n",
-    "#  'ClosestHit_X[2]',\n",
-    "#  'ClosestHit_X[3]',\n",
-    "#  'ClosestHit_Y[0]',\n",
-    "#  'ClosestHit_Y[1]',\n",
-    "#  'ClosestHit_Y[2]',\n",
-    "#  'ClosestHit_Y[3]',\n",
-    "#  'ClosestHit_z[0]',\n",
-    "#  'Lextra_ClosestHit_dt_Y[0]',\n",
-    "#  'MatchedHit_ClosestHit_dtY[0]',\n",
-    "#  'Lextra_ClosestHit_dt_X[1]',\n",
-    "#  'Lextra_ClosestHit_dt_Y[1]',\n",
-    "#  'MatchedHit_ClosestHit_dtY[1]',\n",
-    "#  'MatchedHit_ClosestHit_dtX[2]',\n",
-    "#  'MatchedHit_ClosestHit_dtY[2]',\n",
-    "#  'MatchedHit_ClosestHit_dtX[3]',\n",
-    "#  'MatchedHit_ClosestHit_dtY[3]',\n",
-    "#  'ClosestHit_to_Center[0]',\n",
-    "#  'ClosestHit_to_Center[1]',\n",
-    "#  'ClosestHit_to_Center[2]',\n",
-    "#  'ClosestHit_to_Center[3]']"
+    "valuable_columns = ['ncl[0]',\n",
+    " 'ncl[1]',\n",
+    " 'ncl[2]',\n",
+    " 'ncl[3]',\n",
+    " 'avg_cs[0]',\n",
+    " 'avg_cs[1]',\n",
+    " 'avg_cs[2]',\n",
+    " 'avg_cs[3]',\n",
+    " 'MatchedHit_TYPE[0]',\n",
+    " 'MatchedHit_TYPE[1]',\n",
+    " 'MatchedHit_TYPE[2]',\n",
+    " 'MatchedHit_X[3]',\n",
+    " 'MatchedHit_Y[0]',\n",
+    " 'MatchedHit_Y[1]',\n",
+    " 'MatchedHit_Y[2]',\n",
+    " 'MatchedHit_Y[3]',\n",
+    " 'MatchedHit_DX[3]',\n",
+    " 'MatchedHit_DY[3]',\n",
+    " 'MatchedHit_DZ[3]',\n",
+    " 'MatchedHit_T[0]',\n",
+    " 'MatchedHit_DT[0]',\n",
+    " 'MatchedHit_DT[1]',\n",
+    " 'Lextra_X[3]',\n",
+    " 'NShared',\n",
+    " 'Mextra_DX2[0]',\n",
+    " 'Mextra_DX2[3]',\n",
+    " 'FOI_hits_N',\n",
+    " 'PT',\n",
+    " 'P',\n",
+    " 'ClosestHit_X[0]',\n",
+    " 'ClosestHit_X[1]',\n",
+    " 'ClosestHit_X[2]',\n",
+    " 'ClosestHit_X[3]',\n",
+    " 'ClosestHit_Y[0]',\n",
+    " 'ClosestHit_Y[1]',\n",
+    " 'ClosestHit_Y[2]',\n",
+    " 'ClosestHit_Y[3]',\n",
+    " 'ClosestHit_z[0]',\n",
+    " 'Lextra_ClosestHit_dt_Y[0]',\n",
+    " 'MatchedHit_ClosestHit_dtY[0]',\n",
+    " 'Lextra_ClosestHit_dt_X[1]',\n",
+    " 'Lextra_ClosestHit_dt_Y[1]',\n",
+    " 'MatchedHit_ClosestHit_dtY[1]',\n",
+    " 'MatchedHit_ClosestHit_dtX[2]',\n",
+    " 'MatchedHit_ClosestHit_dtY[2]',\n",
+    " 'MatchedHit_ClosestHit_dtX[3]',\n",
+    " 'MatchedHit_ClosestHit_dtY[3]',\n",
+    " 'ClosestHit_to_Center[0]',\n",
+    " 'ClosestHit_to_Center[1]',\n",
+    " 'ClosestHit_to_Center[2]',\n",
+    " 'ClosestHit_to_Center[3]']"
    ]
   },
   {
@@ -211,13 +211,13 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-06T07:42:05.950488Z",
-     "start_time": "2019-02-06T07:42:05.948024Z"
+     "end_time": "2019-02-06T08:09:02.569948Z",
+     "start_time": "2019-02-06T08:08:59.325136Z"
     }
    },
    "outputs": [],
    "source": [
-    "# data = data[valuable_columns]"
+    "data = data[valuable_columns]"
    ]
   },
   {
@@ -225,8 +225,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-06T07:42:06.246050Z",
-     "start_time": "2019-02-06T07:42:06.243819Z"
+     "end_time": "2019-02-06T08:08:36.744276Z",
+     "start_time": "2019-02-06T08:08:36.741503Z"
     }
    },
    "outputs": [],
@@ -285,55 +285,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-02-06T07:47:49.985110Z",
-     "start_time": "2019-02-06T07:47:49.972305Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "model.fit(train_x, train_y.label, sample_weight=train_y.weight)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-02-06T06:55:38.436273Z",
-     "start_time": "2019-02-06T06:55:18.178939Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "pred_test = model.predict_proba(test_x)[:, 1]\n",
-    "score = scoring.rejection90(np.array(test_y.label), pred_test, sample_weight=np.array(test_y.weight)) * 10000\n",
-    "score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-02-06T07:33:19.988091Z",
-     "start_time": "2019-02-06T07:33:19.543041Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "target_labels.label[target_labels.weight < 0] = (1 + -1 * target_labels.label[target_labels.weight < 0])\n",
-    "target_labels.weight = np.abs(target_labels.weight)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Train final model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target_labels.label[target_labels.weight < 0] = (1 + -1 * target_labels.label[target_labels.weight < 0])\n",
+    "target_labels.weight = np.abs(target_labels.weight)"
    ]
   },
   {
