Fix bugs in experiments/stacking_lgbm2_xgboost_catboost_2.ipynb

--- a/experiments/stacking_lgbm2_xgboost_catboost_2.ipynb
+++ b/experiments/stacking_lgbm2_xgboost_catboost_2.ipynb
@@ -2,11 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-07T13:35:23.333499Z",
-     "start_time": "2019-02-07T13:35:23.308754Z"
+     "end_time": "2019-02-07T20:53:48.039939Z",
+     "start_time": "2019-02-07T20:53:48.036858Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append('../..')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-07T19:44:48.417911Z",
+     "start_time": "2019-02-07T19:44:47.859051Z"
     }
    },
    "outputs": [],
@@ -33,23 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-07T13:35:30.417869Z",
-     "start_time": "2019-02-07T13:35:27.955667Z"
+     "end_time": "2019-02-07T19:44:49.328124Z",
+     "start_time": "2019-02-07T19:44:48.419387Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: numpy.dtype size changed, may indicate binary incompatibility. Expected 96, got 88\n",
-      "  return f(*args, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = pd.read_hdf(\"../data/all_train_data.hdf\")\n",
     "target_labels = pd.read_hdf(\"../data/train_labels.hdf\")"
@@ -57,11 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-07T14:52:40.399907Z",
-     "start_time": "2019-02-07T14:06:53.110Z"
+     "end_time": "2019-02-07T19:44:49.334566Z",
+     "start_time": "2019-02-07T19:44:49.329760Z"
     }
    },
    "outputs": [],
@@ -89,8 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-07T19:44:54.008344Z",
+     "start_time": "2019-02-07T19:44:49.335960Z"
+    }
+   },
    "outputs": [],
    "source": [
     "preprocess_data(data)"
@@ -98,11 +109,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-07T13:38:15.194951Z",
-     "start_time": "2019-02-07T13:37:58.160284Z"
+     "end_time": "2019-02-07T19:45:01.993322Z",
+     "start_time": "2019-02-07T19:44:54.010175Z"
     }
    },
    "outputs": [],
@@ -112,11 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-07T13:45:11.855149Z",
-     "start_time": "2019-02-07T13:45:11.670534Z"
+     "end_time": "2019-02-07T19:45:02.121494Z",
+     "start_time": "2019-02-07T19:45:01.994953Z"
     }
    },
    "outputs": [
@@ -124,13 +135,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/anaconda3/lib/python3.6/site-packages/pandas/core/indexing.py:543: SettingWithCopyWarning: \n",
+      "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:543: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
       "  self.obj[item] = s\n",
-      "/anaconda3/lib/python3.6/site-packages/pandas/core/generic.py:4405: SettingWithCopyWarning: \n",
+      "/usr/local/lib/python3.6/dist-packages/pandas/core/generic.py:4405: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -146,17 +157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-07T13:45:22.829847Z",
-     "start_time": "2019-02-07T13:45:22.824393Z"
+     "end_time": "2019-02-07T19:45:02.126691Z",
+     "start_time": "2019-02-07T19:45:02.123401Z"
     }
    },
    "outputs": [],
    "source": [
     "lgbm = lightgbm.LGBMClassifier(num_leaves=60, n_estimators=200, max_depth=7, n_jobs=-1)\n",
-    "catb = catboost.CatBoostClassifier(n_estimators=800, depth=7, thread_count=12)\n",
+    "catb = catboost.CatBoostClassifier(n_estimators=800, depth=7, thread_count=12, verbose=False)\n",
     "lgbm2 = lightgbm.LGBMClassifier(num_leaves=31, n_estimators=50,\n",
     "                                n_jobs=-1, boosting_type=\"dart\", learning_rate=0.3)\n",
     "xgbt = xgboost.XGBClassifier(n_estimators=250, max_depth=7, n_jobs=12)\n",
@@ -165,11 +176,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-07T15:06:19.712622Z",
-     "start_time": "2019-02-07T15:06:19.685120Z"
+     "end_time": "2019-02-07T19:45:02.141319Z",
+     "start_time": "2019-02-07T19:45:02.127872Z"
     }
    },
    "outputs": [],
@@ -179,39 +190,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-07T15:06:21.248Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "xgbt.fit(train_x, train_y.label, sample_weight=train_y.weight)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2019-02-07T15:13:18.347Z"
+     "end_time": "2019-02-07T20:36:52.764040Z",
+     "start_time": "2019-02-07T19:45:02.142949Z"
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'lightgbm.sklearn.LGBMClassifier'> is training.\n",
+      "<class 'catboost.core.CatBoostClassifier'> is training.\n",
+      "<class 'lightgbm.sklearn.LGBMClassifier'> is training.\n",
+      "<class 'xgboost.sklearn.XGBClassifier'> is training.\n"
+     ]
+    }
+   ],
    "source": [
-    "# for model in models:\n",
-    "#     print(f\"{model.__class__} is training.\")\n",
-    "#     model.fit(train_x, train_y.label, sample_weight=train_y.weight)"
+    "for model in models:\n",
+    "    print(f\"{model.__class__} is training.\")\n",
+    "    model.fit(train_x, train_y.label, sample_weight=train_y.weight)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-07T15:13:18.517Z"
+     "end_time": "2019-02-07T20:36:52.828376Z",
+     "start_time": "2019-02-07T20:36:52.766908Z"
     }
    },
    "outputs": [],
@@ -228,16 +239,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-07T15:13:18.888Z"
+     "end_time": "2019-02-07T20:36:52.842150Z",
+     "start_time": "2019-02-07T20:36:52.829882Z"
     }
    },
    "outputs": [],
    "source": [
     "# Define meta classifier\n",
     "meta_clf = lightgbm.LGBMClassifier(num_leaves=5, n_estimators=200, learning_rate=0.1, n_jobs=-1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-07T20:39:58.307100Z",
+     "start_time": "2019-02-07T20:39:58.301432Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "test_x.columns = test_x.columns.str.replace(\"[\", \"\").str.replace(\"]\", \"\")"
    ]
   },
   {
@@ -252,10 +278,21 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-07T15:13:19.801Z"
+     "start_time": "2019-02-07T21:04:36.736Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1742625, 4)\n",
+      "Train score: 5780.35, test score: 7800.83\n",
+      "(1742625, 4)\n",
+      "Train score: 5805.89, test score: 7962.21\n"
+     ]
+    }
+   ],
    "source": [
     "k =  KFold(n_splits=5)\n",
     "test_scores = []\n",
@@ -270,13 +307,13 @@
     "    mf_train_y.weight = mf_train_y.weight.abs()\n",
     "\n",
     "    \n",
-    "    meta_features = np.array([m.predict_proba(mf_train_x)[:,1] for m in models], axis=1).T\n",
+    "    meta_features = np.concatenate([m.predict_proba(mf_train_x)[:,1].reshape(-1, 1) for m in models], axis=1)\n",
     "    print(meta_features.shape)\n",
-    "    break\n",
+    "#     break\n",
     "    meta_clf.fit(meta_features, mf_train_y.label, sample_weight = mf_train_y.weight)\n",
     "    \n",
     "   \n",
-    "    meta_features_test = np.array([m.predict_proba(mf_test_x)[:,1] for m in models], axis=1).T\n",
+    "    meta_features_test = np.concatenate([m.predict_proba(mf_test_x)[:,1].reshape(-1, 1) for m in models], axis=1)\n",
     "\n",
     "    \n",
     "    train_preds = meta_clf.predict_proba(meta_features)[:, 1]\n",
@@ -291,9 +328,109 @@
     "                                       sample_weight=np.array(mf_test_y.weight)) \n",
     "    test_scores.append(test_score)\n",
     "    \n",
-    "    print(f\"Train score: {train_score:.2f}, test score: {score:.2f}\")\n",
+    "    print(f\"Train score: {train_score:.2f}, test score: {test_score:.2f}\")\n",
     "\n",
-    "print(f\"Train mean score: {np.mean(train_scores):.2f}, test mean score: {np.mean(scores):.2f}\")\n"
+    "print(f\"Train mean score: {np.mean(train_scores):.2f}, test mean score: {np.mean(test_scores):.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-08T06:29:29.975116Z",
+     "start_time": "2019-02-08T06:29:29.965640Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7877.978243829323"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(test_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-08T06:29:43.247345Z",
+     "start_time": "2019-02-08T06:29:43.241036Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "210.10624077699526"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(test_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-08T06:30:44.121136Z",
+     "start_time": "2019-02-08T06:30:44.116653Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5778.03189553093"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(train_scores)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-08T06:30:54.364029Z",
+     "start_time": "2019-02-08T06:30:54.356908Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.10877657681273"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(train_scores)"
    ]
   },
   {
@@ -315,16 +452,47 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-07T15:13:20.489Z"
+     "end_time": "2019-02-08T06:33:15.216597Z",
+     "start_time": "2019-02-08T06:32:37.926270Z"
     }
    },
    "outputs": [],
    "source": [
-    "all_meta_features = np.array([m.predict_proba(test_x)[:,1] for m in models], axis=1).T\n",
+    "all_meta_features = np.concatenate([m.predict_proba(test_x)[:,1].reshape(-1, 1) for m in models], axis=1)\n",
     "\n",
     "test_y.loc[test_y.weight < 0, 'label'] = 1 - test_y.loc[test_y.weight < 0, 'label'] \n",
-    "test_y.weight = test_y.weight.abs()\n",
-    "    \n",
+    "test_y.weight = test_y.weight.abs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-08T06:34:55.307540Z",
+     "start_time": "2019-02-08T06:34:51.325548Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LGBMClassifier(boosting_type='gbdt', class_weight=None, colsample_bytree=1.0,\n",
+       "        importance_type='split', learning_rate=0.1, max_depth=-1,\n",
+       "        min_child_samples=20, min_child_weight=0.001, min_split_gain=0.0,\n",
+       "        n_estimators=200, n_jobs=-1, num_leaves=5, objective=None,\n",
+       "        random_state=None, reg_alpha=0.0, reg_lambda=0.0, silent=True,\n",
+       "        subsample=1.0, subsample_for_bin=200000, subsample_freq=0)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mf_lgbm = lightgbm.LGBMClassifier(num_leaves=5, n_estimators=200, learning_rate=0.1, n_jobs=-1)\n",
+    "\n",
     "mf_lgbm.fit(all_meta_features, test_y.label, sample_weight = test_y.weight)"
    ]
   },
@@ -337,27 +505,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-07T15:13:22.290Z"
+     "end_time": "2019-02-08T06:35:46.516361Z",
+     "start_time": "2019-02-08T06:35:45.739533Z"
     }
    },
    "outputs": [],
    "source": [
     "# Make prediction\n",
     "submission_data = pd.read_hdf(\"../data/all_test_data.hdf\")\n",
-    "submission_data.rename(rename_dict, axis='columns', inplace=True)\n",
     "\n",
     "preprocess_data(submission_data)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-07T15:13:35.403Z"
+     "end_time": "2019-02-08T06:35:47.895856Z",
+     "start_time": "2019-02-08T06:35:47.890249Z"
     }
    },
    "outputs": [],
@@ -367,23 +536,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-07T15:13:39.964Z"
+     "end_time": "2019-02-08T06:36:36.849401Z",
+     "start_time": "2019-02-08T06:36:24.191029Z"
     }
    },
    "outputs": [],
    "source": [
-    "submission_meta_features = np.array([m.predict_proba(submission_data)[:,1] for m in models], axis=1).T\n"
+    "submission_meta_features = np.concatenate([m.predict_proba(submission_data)[:,1].reshape(-1, 1) for m in models], axis=1)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-07T15:13:41.167Z"
+     "end_time": "2019-02-08T06:36:40.924943Z",
+     "start_time": "2019-02-08T06:36:40.545766Z"
     }
    },
    "outputs": [],
@@ -393,10 +564,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-07T15:13:41.497Z"
+     "end_time": "2019-02-08T06:36:47.878320Z",
+     "start_time": "2019-02-08T06:36:46.480603Z"
     }
    },
    "outputs": [],
@@ -429,7 +601,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
