--- a/experiments/stacking_lgbm2_xgboost_catboost_2.ipynb
+++ b/experiments/stacking_lgbm2_xgboost_catboost_2.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-02-07T19:45:02.126691Z",
@@ -170,8 +170,21 @@
     "catb = catboost.CatBoostClassifier(n_estimators=800, depth=7, thread_count=12, verbose=False)\n",
     "lgbm2 = lightgbm.LGBMClassifier(num_leaves=31, n_estimators=50,\n",
     "                                n_jobs=-1, boosting_type=\"dart\", learning_rate=0.3)\n",
-    "xgbt = xgboost.XGBClassifier(n_estimators=250, max_depth=7, n_jobs=12)\n",
-    "models = [lgbm, catb, lgbm2, xgbt]"
+    "xgbt = xgboost.XGBClassifier(n_estimators=250, max_depth=7, n_jobs=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-08T07:05:46.053858Z",
+     "start_time": "2019-02-08T07:05:46.049983Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "models = [lgbm, catb, lgbm2]"
    ]
   },
   {
@@ -275,10 +288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-02-07T21:04:36.736Z"
+     "end_time": "2019-02-08T07:08:42.926286Z",
+     "start_time": "2019-02-08T07:05:51.314952Z"
     }
    },
    "outputs": [
@@ -286,10 +300,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1742625, 4)\n",
-      "Train score: 5780.35, test score: 7800.83\n",
-      "(1742625, 4)\n",
-      "Train score: 5805.89, test score: 7962.21\n"
+      "Train score: 5748.12, test score: 5600.83\n",
+      "Train score: 5746.30, test score: 5630.58\n",
+      "Train score: 5760.88, test score: 5607.80\n",
+      "Train score: 5691.69, test score: 5684.30\n",
+      "Train score: 5742.23, test score: 5731.03\n",
+      "Train mean score: 5737.85, test mean score: 5650.91\n"
      ]
     }
    ],
@@ -302,24 +318,26 @@
     "    mf_train_x, mf_test_x = test_x.iloc[train_index], test_x.iloc[test_index]\n",
     "    mf_train_y, mf_test_y = test_y.iloc[train_index].copy(), test_y.iloc[test_index]\n",
     "    \n",
+    "    mf_train_y_true = mf_train_y.copy()\n",
+    "    \n",
     "    # Invert labels & take absolute weights\n",
     "    mf_train_y.loc[mf_train_y.weight < 0, 'label'] = 1 - mf_train_y.loc[mf_train_y.weight < 0, 'label'] \n",
     "    mf_train_y.weight = mf_train_y.weight.abs()\n",
     "\n",
     "    \n",
-    "    meta_features = np.concatenate([m.predict_proba(mf_train_x)[:,1].reshape(-1, 1) for m in models], axis=1)\n",
-    "    print(meta_features.shape)\n",
-    "#     break\n",
+    "    meta_features = np.array([m.predict_proba(mf_train_x)[:,1] for m in models]).T\n",
+    "    \n",
+    " \n",
     "    meta_clf.fit(meta_features, mf_train_y.label, sample_weight = mf_train_y.weight)\n",
     "    \n",
     "   \n",
-    "    meta_features_test = np.concatenate([m.predict_proba(mf_test_x)[:,1].reshape(-1, 1) for m in models], axis=1)\n",
+    "    meta_features_test = np.array([m.predict_proba(mf_test_x)[:,1] for m in models]).T\n",
     "\n",
     "    \n",
     "    train_preds = meta_clf.predict_proba(meta_features)[:, 1]\n",
-    "    train_score = 10000 * scoring.rejection90(np.array(mf_train_y.label),\n",
+    "    train_score = 10000 * scoring.rejection90(np.array(mf_train_y_true.label),\n",
     "                                      train_preds,\n",
-    "                                      sample_weight=np.array(mf_train_y.weight))\n",
+    "                                      sample_weight=np.array(mf_train_y_true.weight))\n",
     "    train_scores.append(train_score)\n",
     "    \n",
     "    test_preds = meta_clf.predict_proba(meta_features_test)[:, 1]\n",
@@ -335,21 +353,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-08T06:29:29.975116Z",
-     "start_time": "2019-02-08T06:29:29.965640Z"
+     "end_time": "2019-02-08T07:08:42.968410Z",
+     "start_time": "2019-02-08T07:08:42.928172Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.905865</td>\n",
+       "      <td>0.953671</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.905865</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.883156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.953671</td>\n",
+       "      <td>0.883156</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0         1         2\n",
+       "0  1.000000  0.905865  0.953671\n",
+       "1  0.905865  1.000000  0.883156\n",
+       "2  0.953671  0.883156  1.000000"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(meta_features).corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-02-08T07:09:09.740876Z",
+     "start_time": "2019-02-08T07:09:09.733149Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7877.978243829323"
+       "5650.906388307127"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,21 +453,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-08T06:29:43.247345Z",
-     "start_time": "2019-02-08T06:29:43.241036Z"
+     "end_time": "2019-02-08T07:09:10.053765Z",
+     "start_time": "2019-02-08T07:09:10.046941Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "210.10624077699526"
+       "49.62727125874402"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,21 +478,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-08T06:30:44.121136Z",
-     "start_time": "2019-02-08T06:30:44.116653Z"
+     "end_time": "2019-02-08T07:09:10.294635Z",
+     "start_time": "2019-02-08T07:09:10.290434Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5778.03189553093"
+       "5737.847268067641"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,21 +503,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 44,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-08T06:30:54.364029Z",
-     "start_time": "2019-02-08T06:30:54.356908Z"
+     "end_time": "2019-02-08T07:09:10.640553Z",
+     "start_time": "2019-02-08T07:09:10.634020Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17.10877657681273"
+       "23.90430640675209"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,14 +542,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-08T06:33:15.216597Z",
-     "start_time": "2019-02-08T06:32:37.926270Z"
+     "end_time": "2019-02-08T07:10:20.920132Z",
+     "start_time": "2019-02-08T07:09:52.262000Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.6/dist-packages/pandas/core/indexing.py:543: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item] = s\n",
+      "/usr/local/lib/python3.6/dist-packages/pandas/core/generic.py:4405: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self[name] = value\n"
+     ]
+    }
+   ],
    "source": [
     "all_meta_features = np.concatenate([m.predict_proba(test_x)[:,1].reshape(-1, 1) for m in models], axis=1)\n",
     "\n",
@@ -466,11 +578,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-08T06:34:55.307540Z",
-     "start_time": "2019-02-08T06:34:51.325548Z"
+     "end_time": "2019-02-08T07:10:24.867593Z",
+     "start_time": "2019-02-08T07:10:20.921672Z"
     }
    },
    "outputs": [
@@ -485,7 +597,7 @@
        "        subsample=1.0, subsample_for_bin=200000, subsample_freq=0)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,11 +617,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-08T06:35:46.516361Z",
-     "start_time": "2019-02-08T06:35:45.739533Z"
+     "end_time": "2019-02-08T07:12:50.040510Z",
+     "start_time": "2019-02-08T07:12:49.255200Z"
     }
    },
    "outputs": [],
@@ -522,11 +634,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-08T06:35:47.895856Z",
-     "start_time": "2019-02-08T06:35:47.890249Z"
+     "end_time": "2019-02-08T07:12:50.044916Z",
+     "start_time": "2019-02-08T07:12:50.042024Z"
     }
    },
    "outputs": [],
@@ -536,11 +648,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-08T06:36:36.849401Z",
-     "start_time": "2019-02-08T06:36:24.191029Z"
+     "end_time": "2019-02-08T07:13:00.533950Z",
+     "start_time": "2019-02-08T07:12:50.338104Z"
     }
    },
    "outputs": [],
@@ -550,11 +662,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-08T06:36:40.924943Z",
-     "start_time": "2019-02-08T06:36:40.545766Z"
+     "end_time": "2019-02-08T07:13:00.879222Z",
+     "start_time": "2019-02-08T07:13:00.535555Z"
     }
    },
    "outputs": [],
@@ -564,11 +676,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 51,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-02-08T06:36:47.878320Z",
-     "start_time": "2019-02-08T06:36:46.480603Z"
+     "end_time": "2019-02-08T07:13:02.312850Z",
+     "start_time": "2019-02-08T07:13:00.880898Z"
     }
    },
    "outputs": [],
